Apply suggestions from code review
Co-authored-by: Benedikt Fein <fein@fim.uni-passau.de>
Co-authored-by: Dominik Fuchß <dominik.fuchss@kit.edu>